--- a/main/templates/main/post.html
+++ b/main/templates/main/post.html
@@ -152,11 +152,12 @@
         <h2>Posts</h2>
 
         {% for post in posts %}
+        
             <div class="post">
                 <div class="post-header">
                     <!-- <img src="{{ post.user.profile_picture_url }}" alt="User Profile Picture"> -->
                     
-                    <div class="user-name">{{ post.author }}</div>
+                    <div class="user-name">{{ post.author.username }}</div>
                     <a href="{{post.id}}" class="">{{post.title}}</a>
                     <!-- <div class="post-date">{{ post.created_at|date:"F d, Y H:i" }}</div> -->
                 </div>
