--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -99,7 +99,7 @@
 
     <nav>
         <a href="{%url 'post_page'%}">Home</a>
-        <a href="">Profile</a>
+        <a href="/user/{{user.id}}">Profile</a>
         <a href="">Messages</a>
         <a href="">Notifications</a>
         {%if user.is_authenticated%}
@@ -108,7 +108,6 @@
         <a href="{%url 'login_page' %}">Login</a>
         {%endif%}
     </nav>
-
         {% block content %}
         <!-- Content from child templates will be inserted here -->
         {% endblock %}
