--- a/main/templates/main/user.html
+++ b/main/templates/main/user.html
@@ -156,7 +156,7 @@
 {% endblock %}
 
 {% block content %}
-<!-- {{data}} -->
+<!-- {{data}exit } -->
     <div class="profile-container">
         <div class="profile-header">
             <!-- <img src="{{ user.profile_picture_url }}" alt="User Profile Picture"> -->
