--- a/main/templates/main/user.html
+++ b/main/templates/main/user.html
@@ -177,7 +177,7 @@
             </div>
             <div class="follow-info">
                 <span>Followers: {{ data.followers }}</span>
-                <span>Following: {{ user.following_count }}</span>
+                <span>Following: {{following|length}}</span>
             </div>
         </div>
 
