--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -6,33 +6,23 @@
 
 {% block extra_css %}
     <style>
-        .login-container {
-            width: 400px;
-            margin: 100px auto;
-            padding: 20px;
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .login-container h2 {
+        .container h2 {
             text-align: center;
             margin-bottom: 20px;
         }
 
-        .login-container form {
+        .container form {
             display: flex;
             flex-direction: column;
         }
 
-        .login-container label {
+        .container label {
             margin-bottom: 5px;
             font-weight: bold;
         }
 
-        .login-container input[type="text"],
-        .login-container input[type="password"] {
+        .container input[type="text"],
+        .container input[type="password"] {
             padding: 10px;
             margin-bottom: 15px;
             border: 1px solid #ccc;
@@ -55,23 +45,23 @@
             background-color: #0056b3;
         }
 
-        .login-container .error {
+        .container .error {
             color: #ff0000;
             margin-bottom: 15px;
             text-align: center;
         }
 
-        .login-container .signup-link {
+        .container .signup-link {
             text-align: center;
             margin-top: 10px;
         }
 
-        .login-container .signup-link a {
+        .container .signup-link a {
             color: #007bff;
             text-decoration: none;
         }
 
-        .login-container .signup-link a:hover {
+        .container .signup-link a:hover {
             text-decoration: underline;
         }
         .outlined-button{
@@ -79,12 +69,13 @@
             text-decoration: none;
             text-align: center;
         }
+       
         
     </style>
 {% endblock %}
 
 {% block content %}
-    <div class="login-container">
+    <div class="container">
 
         {%if user.is_authenticated%}
         <form method="post" action="../auth/logout">
