--- a/main/templates/main/user.html
+++ b/main/templates/main/user.html
@@ -6,16 +6,7 @@
 
 {% block extra_css %}
     <style>
-        .profile-container {
-            width: 100%;
-            max-width: 800px;
-            margin: 20px auto;
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-        }
+        
 
         .profile-header {
             display: flex;
@@ -157,7 +148,7 @@
 
 {% block content %}
 <!-- {{data}exit } -->
-    <div class="profile-container">
+    <div class="container">
         <div class="profile-header">
             <!-- <img src="{{ user.profile_picture_url }}" alt="User Profile Picture"> -->
             <div class="user-info">
