--- a/main/templates/main/single_post.html
+++ b/main/templates/main/single_post.html
@@ -6,21 +6,7 @@
 
 {% block extra_css %}
     <style>
-        .post-container {
-            width: 600px;
-            margin: 50px auto;
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-        }
-
-        .post-header {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
-        }
+        
 
         .post-header img {
             border-radius: 50%;
@@ -37,7 +23,9 @@
             color: #777;
             margin-left: auto;
         }
-
+        .post-title{
+            font-weight: bold;
+        }
         .post-image {
             width: 100%;
             aspect-ratio: 1;
@@ -50,7 +38,11 @@
             width: 100%;
             height: 100%;
         }
-
+        .post-header {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 10px;
+        }
         .post-actions {
             display: flex;
             justify-content: space-between;
@@ -138,11 +130,11 @@
 {% endblock %}
 
 {% block content %}
-    <div class="post-container">
+    <div class="container">
         <div class="post-header">
             <!-- <img src="{{ post.user.profile_picture_url }}" alt="User Profile Picture"> -->
             <div class="user-name">{{ post.author.username }}</div>
-            <div class="user-name">{{ post.title }}</div>
+            <div class="post-title">{{ post.title }}</div>
             <!-- <div class="post-date">{{ post.created_at|date:"F d, Y H:i" }}</div> -->
         </div>
 
@@ -152,7 +144,6 @@
 
         <div class="post-actions">
             <button>Like ({{ post.likes }})</button>
-            <button>Comment</button>
             <button>Share</button>
         </div>
 
@@ -172,7 +163,7 @@
             {% endfor %}
         </div>
 
-        <div class="comment-form">
+        <div class="comment-form" id="create-comment">
             <h4>Leave a Comment</h4>
             <form method="post">
                 {% csrf_token %}
